RESULTS/AutoSpec/raw_results/out-4o-pIp/44_0012/44_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/44_0012/44_merged.c:56:1: error: unterminated comment
   56 | /*@;
      | ^
